crates/strider/tests/snapshots/v3__x86__memory__array_fill.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v10" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v10" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v12" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "11" -> "v12" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "11" -> "v10" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "9" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "14" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v16" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "15" -> "v16" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v17" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "15" -> "v17" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "14" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "19" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v20" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v20" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v17" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v22" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "21" -> "v22" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "21" -> "v20" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "19" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "24" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v16" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v22" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "24" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "28" -> "25" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="φ EDX", shape=house, fillcolor="#163030"];
  "24" -> "28" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "31" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "32" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "33" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="φ EDI", shape=house, fillcolor="#163030"];
  "14" -> "35" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" -> "35" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="φ EDI", shape=house, fillcolor="#163030"];
  "9" -> "39" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "38" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="φ EAX", shape=house, fillcolor="#163030"];
  "24" -> "27" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "42" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "43" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "43" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "43" [label="arg[2] ← ram[sp + 12]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "42" [label="init\nEAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="φ Mem", shape=house, fillcolor="#163030"];
  "24" -> "26" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "44" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "47" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="φ ESI", shape=house, fillcolor="#163030"];
  "19" -> "50" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "53" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="φ Mem", shape=house, fillcolor="#163030"];
  "19" -> "47" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "46" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" [label="φ Mem", shape=house, fillcolor="#163030"];
  "14" -> "45" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "44" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "56" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "62" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "63" -> "56" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x18:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "66" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" -> "62" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "68" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x14:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "70" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "71" -> "66" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "74" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "75" -> "70" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "77" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "78" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "79" -> "74" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" -> "74" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "80" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "81" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "82" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "83" -> "78" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "84" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "85" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "86" -> "82" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "87" -> "82" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" -> "82" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "87" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "86" [label="φ Mem", shape=house, fillcolor="#163030"];
  "9" -> "86" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "55" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "88" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v89" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v89" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "90" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "90" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "88" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "91" -> "88" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v92" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v92" -> "88" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "93" -> "88" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "93" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "91" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "94" -> "91" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v95" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v95" -> "91" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "96" -> "91" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "96" [label="init\nEBX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "94" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "97" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "97" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "98" -> "97" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "99" -> "97" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "99" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "98" [label="arg[1] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "97" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "100" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "100" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "101" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "101" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "98" -> "101" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "102" -> "101" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "102" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "103" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "104" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "104" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "103" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "98" -> "103" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "105" -> "103" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "105" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "98" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "106" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "106" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
