crates/strider/tests/snapshots/v3__x86__memory__pointer_chase.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
